# SC15_APEX_tutorial

./: CMakeLists.txt  README.md
1d_stencil_profiles/: load_profiles.sh  perfdmf.cfg.SC15_tutorial  tauprofile-1.xml  tauprofile-10.xml  tauprofile-12.xml  tauprofile-14.xml  tauprofile-16.xml  tauprofile-18.xml  tauprofile-2.xml  tauprofile-20.xml  tauprofile-22.xml  tauprofile-24.xml  tauprofile-26.xml  tauprofile-28.xml  tauprofile-30.xml  tauprofile-32.xml  tauprofile-4.xml  tauprofile-6.xml  tauprofile-8.xml  total_execution_time.eps
1d_stencil_profiles/SC15_tutorial/: perfdmf.h2.db  perfdmf.trace.db
apex_examples/: 1d_stencil_4.cpp  1d_stencil_4_energy.cpp  1d_stencil_4_repart.cpp  1d_stencil_4_throttle.cpp  CMakeLists.txt  apex_fibonacci.cpp
etc/: Xeon.cmake  x86_64.cmake
scripts/: configure-cray.sh  configure-host.sh  configure-livedvd.sh  configure-mic.sh  configure.sh  run_1d_stencil-cray.sh  run_1d_stencil-host.sh  run_1d_stencil-mic.sh  run_1d_stencil_energy-cray.sh  run_1d_stencil_repart-cray.sh  run_1d_stencil_repart-host.sh  run_1d_stencil_scaling-cray.sh  run_1d_stencil_scaling-host.sh  run_1d_stencil_scaling-mic.sh  run_1d_stencil_throttle-cray.sh  run_1d_stencil_throttle-host.sh  run_1d_stencil_throttle-mic.sh  run_apex_fibonacci-cray.sh  run_apex_fibonacci-host.sh  run_apex_fibonacci-livedvd.sh  run_apex_fibonacci-mic.sh
